
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ kern_return_t ;
typedef int CFNumberRef ;


 int CFNumberCreate (int ,int ,char*) ;
 int CFSTR (char*) ;
 scalar_t__ IORegistryEntrySetCFProperty (int ,int ,int ) ;
 scalar_t__ KERN_SUCCESS ;
 int kCFAllocatorDefault ;
 int kCFNumberCharType ;
 int printf (char*) ;
 int service ;

void* setter(void* arg) {
  char number = 1;
  CFNumberRef num = CFNumberCreate(kCFAllocatorDefault, kCFNumberCharType, &number);

  while(1) {
    kern_return_t err;
    err = IORegistryEntrySetCFProperty(
      service,
      CFSTR("IOServiceLegacyMatchingRegistryID"),
      num);

    if (err != KERN_SUCCESS){
      printf("setProperty failed\n");
      return ((void*)0);
    }
  }
  return ((void*)0);
}
