; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_41164.c_setter.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_41164.c_setter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kCFAllocatorDefault = common dso_local global i32 0, align 4
@kCFNumberCharType = common dso_local global i32 0, align 4
@service = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"IOServiceLegacyMatchingRegistryID\00", align 1
@KERN_SUCCESS = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [20 x i8] c"setProperty failed\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @setter(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8, align 1
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  store i8 1, i8* %3, align 1
  %6 = load i32, i32* @kCFAllocatorDefault, align 4
  %7 = load i32, i32* @kCFNumberCharType, align 4
  %8 = call i32 @CFNumberCreate(i32 %6, i32 %7, i8* %3)
  store i32 %8, i32* %4, align 4
  br label %9

9:                                                ; preds = %1, %19
  %10 = load i32, i32* @service, align 4
  %11 = call i32 @CFSTR(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %12 = load i32, i32* %4, align 4
  %13 = call i64 @IORegistryEntrySetCFProperty(i32 %10, i32 %11, i32 %12)
  store i64 %13, i64* %5, align 8
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* @KERN_SUCCESS, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %9
  %18 = call i32 @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  ret i8* null

19:                                               ; preds = %9
  br label %9
}

declare dso_local i32 @CFNumberCreate(i32, i32, i8*) #1

declare dso_local i64 @IORegistryEntrySetCFProperty(i32, i32, i32) #1

declare dso_local i32 @CFSTR(i8*) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
